# preu-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/: dependencies.py
app/api/routes/: health.py  products.py  scrapers.py
app/repositories/: price_history_repository.py  product_repository.py  queue_repository.py
app/scrapers/: base.py  bonpreu.py  mercadona.py
app/services/: price_history_service.py  product_service.py  queue_service.py  scraping_service.py
app/tasks/: scheduler.py
