[project]
name = "preu-app"
version = "0.1.0"
description = "Supermarket price scraper API"
authors = [
    {name = "Pau Coll", email = "pcollcasellas@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
    "apscheduler==3.10.4",
    "pydantic-settings==2.0.3",
    "pydantic==2.5.0",
    "lxml==4.9.3",
    "asyncio-throttle==1.0.2",
    "tqdm==4.66.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
]
